Fix: spacing wip

--- a/css/style.css
+++ b/css/style.css
@@ -30,11 +30,15 @@ h1 {
     font-size: 2.5rem;
     font-weight: bold;
 }
+.sub-header p:first-child {
+    color: rgb(22, 21, 21);
+}
+
 .sub-header {
     margin-right: auto;
     margin-left: auto;
     padding-top: 2rem;
-    padding-bottom: 1rem;
+    padding-bottom: 2.5rem;
     font-size: 0.8rem;
     text-align: center;
     font-weight: lighter;
@@ -60,11 +64,11 @@ h3 , p, em {
     
 }
 .card-container p:nth-child(3) {
-    color:rgb(121, 171, 213);
+    color:rgb(163, 210, 248);
 }
 
 .card-container {
-    background-color: rgb(12, 12, 72);
+    background-color: rgb(3, 3, 36);
     height: 100px;
 }
 
